# Herald

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
crates/herald-cli/: Cargo.toml
crates/herald-cli/src/: main.rs  wizard.rs
crates/herald-cli/src/commands/: mod.rs  send.rs  setup.rs  start.rs  status.rs  stop.rs
crates/herald-core/: Cargo.toml
crates/herald-core/src/: config.rs  error.rs  lib.rs  logging.rs  types.rs
crates/herald-core/src/auth/: chat_id.rs  mod.rs  otp.rs
crates/herald-core/src/ipc/: client.rs  mod.rs  protocol.rs  server.rs
crates/herald-core/src/security/: content_filter.rs  mod.rs  peercred.rs
crates/herald-core/src/session/: mod.rs  registry.rs  token.rs
crates/herald-core/src/telegram/: bot.rs  callbacks.rs  commands.rs  formatting.rs  handlers.rs  mod.rs
crates/herald-daemon/: Cargo.toml
crates/herald-daemon/src/: headless.rs  main.rs  pty.rs  queue.rs  service.rs  signal.rs
k8s/: deployment.yaml  promtail-config.yaml
launchd/: com.herald.daemon.plist
plugin/: config.env.example
plugin/.claude-plugin/: plugin.json
plugin/commands/: herald-connect.md  herald-disconnect.md  herald.md
plugin/hooks/: herald-common.sh  hooks.json  on-notification.sh  on-post-tool-use.sh  on-pre-tool-use.sh  on-session-end.sh  on-session-start.sh  on-stop.sh  on-user-prompt.sh
scripts/: herald-relay.logrotate
systemd/: heraldd.service
