[package]
name = "herald-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Herald CLI - setup wizard and daemon management"

[[bin]]
name = "herald"
path = "src/main.rs"

[dependencies]
herald-core = { path = "../herald-core" }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
colored = "3"
