[package]
name = "herald-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Herald daemon - Claude Code Telegram relay service"

[[bin]]
name = "heraldd"
path = "src/main.rs"

[dependencies]
herald-core = { path = "../herald-core" }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tracing-journald = "0.3"
sd-notify = "0.4"
nix = { version = "0.29", features = ["term", "process", "signal"] }
libc = "0.2"
