[package]
name = "herald-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Herald daemon - Claude Code Telegram relay service"

[[bin]]
name = "heraldd"
path = "src/main.rs"

[features]
default = ["systemd"]
systemd = ["dep:sd-notify", "dep:tracing-journald"]

[dependencies]
herald-core = { path = "../herald-core" }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
nix = { version = "0.29", features = ["term", "process", "signal"] }
libc = "0.2"
teloxide = { version = "0.13", features = ["macros"] }

# Optional: Linux systemd integration
sd-notify = { version = "0.4", optional = true }
tracing-journald = { version = "0.3", optional = true }
